--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningKidsApp"
         tools:targetApi="31" >
+
+        <service android:name=".BackgroundMusicService" />
         <activity
             android:name=".Congrats"
             android:exported="false" />
